# hack-Archipelag2025-otbor

./: .gitignore  pyproject.toml
src/: main.py
src/dataset/: YaDiskDataset.py  display.py  main.py
src/pure_yolo/: config.py  inference.py  prepare.py  trainer.py
src/yandex_image_getter/: download.py  main.py  main2.py  upload_to_kaggle.py  utils.py
