[project]
name = "pure-yolo"
version = "0.1.0"
description = ""
authors = [
    {name = "KruTimurch",email = "teisltvg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pure_yolo", from = "src"},
{include = "yandex_image_getter", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
