[project]
name = "pure-yolo"
version = "0.1.0"
description = ""
authors = [
    {name = "KruTimurch",email = "teisltvg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "ultralytics (>=8.3.173,<9.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)"
]

[tool.poetry]
packages = [{include = "pure_yolo", from = "src"},
{include = "yandex_image_getter", from = "src"},
]


[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch-cuda"}
torchvision = {source = "torch-cuda"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
